@@ -14,6 +14,7 @@ my $builder = Module::Build->new(
         'Test::Differences' => 0,
         'Test::Deep'        => 0,
         'Test::Harness'     => 3.07,
+        'Test::use::ok'     => 0.02,
         'Test::Warn'        => 0.10,
         'perl'              => '5.006',
     },
